:speech_balloon: 古いタイトルを修正

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="manifest" href="manifest.json">
     
-    <meta property="og:title" content="Fast logbook lite" data-translate="popup_title">
+    <meta property="og:title" content="Fast logbook PWA" data-translate="popup_title">
     <meta property="og:description" content="Time-stamped work notes PWA" data-translate="popup_description">
     <meta property="og:image" content="/images/icon_256.png">
 
