--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
         <div class="offcanvas-body">
             <div class="d-flex flex-column">
-                <a id="configure" href="config.html" class="btn btn-outline-dark mb-2" data-translate="configure"></a>
                 <a id="view_formatted_log" class="btn btn-outline-dark mb-2" data-translate="view_formatted_log"></a>
                 <a id="download_formatted_log" class="btn btn-outline-dark mb-2" data-translate="download_formatted_log"></a>
+                <a id="configure" href="config.html" class="btn btn-outline-success mb-2" data-translate="configure"></a>
                 <a id="delete_log" href="#" class="btn btn-danger" data-translate="delete_log"></a>
             </div>
         </div>
