--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column h-100">
                 <a id="view_formatted_log" class="btn btn-outline-dark mb-2" data-translate="view_formatted_log"></a>
                 <a id="download_formatted_log" class="btn btn-outline-dark mb-2" data-translate="download_formatted_log"></a>
                 <a id="configure" href="config.html" class="btn btn-outline-success mb-2" data-translate="configure"></a>
                 <a id="delete_log" href="#" class="btn btn-danger" data-translate="delete_log"></a>
+                <span id="version_label" class="outline-dark mb-2 mt-auto">ver. <span id="version_number"></span></span>
             </div>
         </div>
     </div>
