--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/img/icon_256.png" type="image/png">
 
     <link rel="manifest" href="manifest.json">
-    
+
     <meta property="og:title" content="Fast logbook PWA" data-translate="popup_title">
     <meta property="og:description" content="Time-stamped work notes PWA" data-translate="popup_description">
     <meta property="og:image" content="/images/icon_256.png">
@@ -24,7 +24,8 @@
 <body class="dc6a3b0594269eefaeb">
     <nav class="navbar navbar-dark bg-dark navbar-overlay">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sideMenu" aria-controls="sideMenu" aria-expanded="false" aria-label="Open menu" style="display: block;">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sideMenu"
+                aria-controls="sideMenu" aria-expanded="false" aria-label="Open menu" style="display: block;">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#" data-translate="popup_title"></a>
@@ -39,8 +40,10 @@
         <div class="offcanvas-body">
             <div class="d-flex flex-column h-100">
                 <a id="view_formatted_log" class="btn btn-outline-dark mb-2" data-translate="view_formatted_log"></a>
-                <a id="download_formatted_log" class="btn btn-outline-dark mb-2" data-translate="download_formatted_log"></a>
-                <a id="configure" href="config.html" class="btn btn-outline-success mb-2" data-translate="configure"></a>
+                <a id="download_formatted_log" class="btn btn-outline-dark mb-2"
+                    data-translate="download_formatted_log"></a>
+                <a id="configure" href="config.html" class="btn btn-outline-success mb-2"
+                    data-translate="configure"></a>
                 <a id="delete_log" href="#" class="btn btn-danger" data-translate="delete_log"></a>
                 <span id="version_label" class="outline-dark mb-2 mt-auto">ver. <span id="version_number"></span></span>
             </div>
@@ -105,4 +108,3 @@
 </body>
 
 </html>
-
