--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
     <script src="/js/lib/bootstrap.bundle.min.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
 
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/dark-theme.css" rel="stylesheet">
     <script src="/js/main.js" type="module"></script>
+
     <title data-translate="popup_title"></title>
 </head>
 
