:sparkles: Added support for the install button.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     data-translate="configure"></a>
                 <a id="delete_log" href="#" class="btn btn-danger" data-translate="delete_log"></a>
                 <span id="version_label" class="outline-dark mb-2 mt-auto">ver. <span id="version_number"></span></span>
+                <a id="install_pwa" href="#" class="btn btn-outline-info mt-2 d-none" data-translate="install_pwa"></a>
             </div>
         </div>
     </div>
