--- a/config.html
+++ b/config.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+<html data-bs-theme="auto">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/js/lib/bootstrap.bundle.min.js"></script>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="/css/config.css" rel="stylesheet">
     <link href="/css/dark-theme.css" rel="stylesheet">
@@ -29,7 +30,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="sideMenu" aria-labelledby="sideMenuLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="sideMenuLabel" data-translate="config_title"></h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <button type="button" class="btn-close text-reset" data-bs-theme="light" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
             <div class="d-flex flex-column h-100">
