--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html data-bs-theme="auto">
 
 <head>
     <meta charset="UTF-8">
@@ -13,8 +14,8 @@
     <meta property="og:description" content="Time-stamped work notes PWA" data-translate="popup_description">
     <meta property="og:image" content="/images/icon_256.png">
 
-    <script src="/js/lib/bootstrap.bundle.min.js"></script>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/dark-theme.css" rel="stylesheet">
@@ -37,18 +38,20 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="sideMenu" aria-labelledby="sideMenuLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="sideMenuLabel" data-translate="popup_title"></h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <button type="button" class="btn-close text-reset" data-bs-theme="light" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
             <div class="d-flex flex-column h-100">
-                <a id="view_formatted_log" class="btn btn-outline-dark mb-2" data-translate="view_formatted_log"></a>
-                <a id="download_formatted_log" class="btn btn-outline-dark mb-2"
+                <a id="view_formatted_log" class="btn btn-outline-secondary mb-2"
+                    data-translate="view_formatted_log"></a>
+                <a id="download_formatted_log" class="btn btn-outline-secondary mb-2"
                     data-translate="download_formatted_log"></a>
                 <a id="configure" href="config.html" class="btn btn-outline-success mb-2"
                     data-translate="configure"></a>
-                <a id="delete_log" href="#" class="btn btn-danger" data-translate="delete_log"></a>
-                <span id="version_label" class="outline-dark mb-2 mt-auto">ver. <span id="version_number"></span></span>
-                <a id="install_pwa" href="#" class="btn btn-outline-info mt-2 d-none" data-translate="install_pwa"></a>
+                <a id="delete_log" href="#" class="btn btn-danger mt-auto" data-translate="delete_log"></a>
+                <span id="version_label" class="outline-dark mt-3">ver. <span id="version_number"></span></span>
+                <a id="install_pwa" href="#" class="btn btn-outline-info mt-3 d-none" data-translate="install_pwa"></a>
             </div>
         </div>
     </div>
