--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
     <link rel="manifest" href="manifest.json">
 
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fast-logbook.app">
     <meta property="og:title" content="Fast logbook PWA" data-translate="popup_title">
+    <meta property="og:name" content="Fast logbook PWA" data-translate="popup_title">
     <meta property="og:description" content="Time-stamped work notes PWA" data-translate="popup_description">
-    <meta property="og:image" content="/images/icon_256.png">
+    <meta property="og:image" content="/img/icon_256.png">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +24,7 @@
     <link href="/css/dark-theme.css" rel="stylesheet">
     <script src="/js/main.js" type="module"></script>
 
-    <title data-translate="popup_title"></title>
+    <title data-translate="popup_title">Fast logbook PWA</title>
 </head>
 
 <body class="dc6a3b0594269eefaeb">
