--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="/img/icon_256.png" type="image/png">
+    <link rel="icon" href="img/android-launchericon-72-72.png" type="image/png">
 
     <link rel="manifest" href="manifest.json">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fast-logbook.app">
-    <meta property="og:title" content="Fast logbook PWA" data-translate="popup_title">
-    <meta property="og:name" content="Fast logbook PWA" data-translate="popup_title">
-    <meta property="og:description" content="Time-stamped work notes PWA" data-translate="popup_description">
-    <meta property="og:image" content="/img/icon_256.png">
+    <meta property="og:url" content="https://fast-logbook.netlify.app">
+    <meta property="og:title" content="Fast logbook PWA">
+    <meta property="og:site_name" content="hidao80 Apps">
+    <meta property="og:description" content="Time-stamped work notes PWA">
+    <meta property="og:image" content="https://fast-logbook.netlify.app/img/android-launchericon-512-512.png">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
