--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <script src="/js/main.js" type="module"></script>
 
     <title data-translate="popup_title">Fast logbook PWA</title>
+    <script type="speculationrules">
+    {
+      "prerender": [{ "where": { "href_matches": "/*" }, "eagerness": "moderate" }],
+      "prefetch": [{ "where": { "href_matches": "/*" }, "eagerness": "moderate" }]
+    }
+    </script>
 </head>
 
 <body class="dc6a3b0594269eefaeb">
