:wrench: add global readonly symbol "bootstrap".

--- a/index.html
+++ b/index.html
@@ -168,13 +168,15 @@
                                             aria-selected="true" data-translate="help_tab_main_screeen"></button>
                                         <button class="nav-link" id="nav-config-tab" data-bs-toggle="tab"
                                             data-bs-target="#nav-config" type="button" role="tab"
-                                            aria-controls="nav-config" aria-selected="false" data-translate="help_tab_config_screen"></button>
+                                            aria-controls="nav-config" aria-selected="false"
+                                            data-translate="help_tab_config_screen"></button>
                                     </div>
                                 </nav>
 
                                 <div class="tab-content" id="nav-tabContent">
                                     <!-- Help of main screen-->
-                                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
+                                        aria-labelledby="nav-home-tab">
                                         <section class="mb-4">
                                             <h2 class="h3" data-translate="help_overview_title"></h2>
                                             <p data-translate="help_overview_content"></p>
@@ -203,12 +205,14 @@
                                         </section>
 
                                         <section class="mb-4">
-                                            <h2 class="h3" data-translate="help_main_screen_shortcut_settings_title"></h2>
+                                            <h2 class="h3" data-translate="help_main_screen_shortcut_settings_title">
+                                            </h2>
                                             <p data-translate="help_main_screen_shortcut_settings_content"></p>
                                         </section>
 
                                         <section class="mb-4">
-                                            <h2 class="h3" data-translate="help_main_screen_example_of_summary_format"></h2>
+                                            <h2 class="h3" data-translate="help_main_screen_example_of_summary_format">
+                                            </h2>
                                             <p data-translate="help_main_screen_example_1"></p>
                                             <ul>
                                                 <li data-translate="help_main_screen_example_2"></li>
@@ -217,49 +221,71 @@
 
                                             <div class="card mb-3">
                                                 <div class="card-body">
-                                                    <h4 class="h5 card-title" data-translate="help_main_screen_example_4"></h4>
-                                                    <pre class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_5"></code></pre>
-                                                    <p class="text-muted mt-2" data-translate="help_main_screen_example_6"></p>
+                                                    <h4 class="h5 card-title"
+                                                        data-translate="help_main_screen_example_4"></h4>
+                                                    <pre
+                                                        class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_5"></code></pre>
+                                                    <p class="text-muted mt-2"
+                                                        data-translate="help_main_screen_example_6"></p>
                                                 </div>
                                             </div>
 
                                             <div class="card mb-3">
                                                 <div class="card-body">
-                                                    <h4 class="h5 card-title" data-translate="help_main_screen_example_of_project"></h4>
-                                                    <pre class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_7"></code></pre>
-                                                    <p class="text-muted mt-2" data-translate="help_main_screen_example_8"></p>
+                                                    <h4 class="h5 card-title"
+                                                        data-translate="help_main_screen_example_of_project"></h4>
+                                                    <pre
+                                                        class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_7"></code></pre>
+                                                    <p class="text-muted mt-2"
+                                                        data-translate="help_main_screen_example_8"></p>
                                                 </div>
                                             </div>
 
                                             <div class="card mb-3">
                                                 <div class="card-body">
-                                                    <h4 class="h5 card-title" data-translate="help_main_screen_example_of_customer_summary_format"></h4>
-                                                    <pre class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_9"></code></pre>
-                                                    <p class="text-muted mt-2" data-translate="help_main_screen_example_10"></p>
+                                                    <h4 class="h5 card-title"
+                                                        data-translate="help_main_screen_example_of_customer_summary_format">
+                                                    </h4>
+                                                    <pre
+                                                        class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_9"></code></pre>
+                                                    <p class="text-muted mt-2"
+                                                        data-translate="help_main_screen_example_10"></p>
                                                 </div>
                                             </div>
 
                                             <div class="card mb-3">
                                                 <div class="card-body">
-                                                    <h4 class="h5 card-title" data-translate="help_main_screen_example_of_summary_format_by_task_type"></h4>
-                                                    <pre class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_11"></code></pre>
-                                                    <p class="text-muted mt-2" data-translate="help_main_screen_example_12"></p>
+                                                    <h4 class="h5 card-title"
+                                                        data-translate="help_main_screen_example_of_summary_format_by_task_type">
+                                                    </h4>
+                                                    <pre
+                                                        class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_11"></code></pre>
+                                                    <p class="text-muted mt-2"
+                                                        data-translate="help_main_screen_example_12"></p>
                                                 </div>
                                             </div>
 
                                             <div class="card mb-3">
                                                 <div class="card-body">
-                                                    <h4 class="h5 card-title" data-translate="help_main_screen_example_of_summary_format_with_case_number"></h4>
-                                                    <pre class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_13"></code></pre>
-                                                    <p class="text-muted mt-2" data-translate="help_main_screen_example_14"></p>
+                                                    <h4 class="h5 card-title"
+                                                        data-translate="help_main_screen_example_of_summary_format_with_case_number">
+                                                    </h4>
+                                                    <pre
+                                                        class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_13"></code></pre>
+                                                    <p class="text-muted mt-2"
+                                                        data-translate="help_main_screen_example_14"></p>
                                                 </div>
                                             </div>
 
                                             <div class="card mb-3">
                                                 <div class="card-body">
-                                                    <h4 class="h5 card-title" data-translate="help_main_screen_example_of_combined_tabulation_format"></h4>
-                                                    <pre class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_15"></code></pre>
-                                                    <p class="text-muted mt-2" data-translate="help_main_screen_example_16"></p>
+                                                    <h4 class="h5 card-title"
+                                                        data-translate="help_main_screen_example_of_combined_tabulation_format">
+                                                    </h4>
+                                                    <pre
+                                                        class="bg-light p-2 rounded"><code data-translate="help_main_screen_example_15"></code></pre>
+                                                    <p class="text-muted mt-2"
+                                                        data-translate="help_main_screen_example_16"></p>
                                                 </div>
                                             </div>
 
@@ -272,7 +298,8 @@
                                         </section>
 
                                         <section class="mb-4">
-                                            <h2 class="h3" data-translate="help_main_screen_offline_features_title"></h2>
+                                            <h2 class="h3" data-translate="help_main_screen_offline_features_title">
+                                            </h2>
                                             <p data-translate="help_main_screen_offline_features_content"></p>
                                         </section>
 
@@ -283,15 +310,18 @@
                                     </div>
 
                                     <!-- Help of config screen -->
-                                    <div class="tab-pane fade" id="nav-config" role="tabpanel" aria-labelledby="nav-config-tab">
+                                    <div class="tab-pane fade" id="nav-config" role="tabpanel"
+                                        aria-labelledby="nav-config-tab">
                                         <section class="mb-4">
                                             <h2 class="h3" data-translate="help_config_screen_title"></h2>
                                             <p data-translate="help_config_screen_customizable_behavior"></p>
                                         </section>
 
                                         <section class="mb-4">
-                                            <h3 class="h4" data-translate="help_config_screen_setting_time_rounding_unit"></h3>
-                                            <p data-translate="help_config_screen_choice_available_timestamp_rounding"></p>
+                                            <h3 class="h4"
+                                                data-translate="help_config_screen_setting_time_rounding_unit"></h3>
+                                            <p data-translate="help_config_screen_choice_available_timestamp_rounding">
+                                            </p>
                                             <ul>
                                                 <li data-translate="help_config_screen_example_1"></li>
                                                 <li data-translate="help_config_screen_example_2"></li>
@@ -313,8 +343,10 @@
                                                 <li data-translate="help_config_screen_example_10"></li>
                                                 <li data-translate="help_config_screen_example_11"></li>
                                             </ul>
-                                            <p data-translate="help_config_screen_repeated_input_one_touch_recording"></p>
-                                            <div class="alert alert-info" role="alert" data-translate="help_config_screen_hint"></div>
+                                            <p data-translate="help_config_screen_repeated_input_one_touch_recording">
+                                            </p>
+                                            <div class="alert alert-info" role="alert"
+                                                data-translate="help_config_screen_hint"></div>
                                         </section>
 
                                         <section class="mb-4">
@@ -328,7 +360,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" data-translate="help_close_button"></button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        data-translate="help_close_button"></button>
                 </div>
             </div>
         </div>
