--- a/config.html
+++ b/config.html
@@ -12,6 +12,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="/css/config.css" rel="stylesheet">
+
+    <!-- i18n初期化スクリプト(同期実行でDOM構築前に翻訳) -->
+    <script type="module">
+        import Multilingualization from '/js/lib/multilingualization.js';
+        Multilingualization.init();
+    </script>
+
     <script src="/js/config.js" type="module"></script>
 
     <title id="title" data-translate="config_title"></title>
