--- a/config.html
+++ b/config.html
@@ -15,7 +15,7 @@
         import Multilingualization from '/js/lib/multilingualization.js';
         Multilingualization.init();
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/config.js" type="module"></script>
 
     <title id="title" data-translate="config_title"></title>
